Added new massive notes endpoint implementation
